--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,7 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
+
+
+.ElenaBremner {
+    font-family: 'Roboto Mono', monospace;
+    color:#6E6E6E;
+    /*font-weight: bold #6E6E6E ;*/
+    padding-left:0%;
+    padding-top:0%;
+    padding-bottom:20%;
+    font-size:12pt;
+    line-height: 1.3;
+
+}
 .sidebar {
-    padding-top:80px; /* padding-top must be the same as header height */
-    padding-left:60px;
+    font-family: 'Roboto Mono', monospace;
+    padding-top:0%; /* padding-top must be the same as header height */
+    padding-left:2%;
     width:15%;
     height:100%;
     background-color:white;
@@ -9,31 +24,23 @@
     position: fixed;
     z-index:99;
     font-size:12pt;
-    font-color:red;  
-
+    line-height: 4;
+    
 }
 
 .container {
-    font-family:  'Share Tech Mono', monospace;
+    
     padding: 25px;
     margin: 0px;
 }
 
 .maincontent {
+    font-family: 'Roboto Mono', monospace;
     position: relative;
     width: 100%;
-    padding-left:15%; /* padding-left must be the same as sidebar width */
+    padding-left:16%; /* padding-left must be the same as sidebar width */
     height: 0px; /* This could be anything, content should scroll vertical */
-    background: white;
+    background-color: white;
     box-sizing:border-box;
-    padding-top: 0px;
-}
-
-.linkStyle {
-    color: '#CACCCE';
-    textDecoration: 'none';
-}
-
-.linkActiveStyle {
-    color: "#FF7963";
+    padding-top: 5%;
 }
