--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
+
 .container {
+
     position: relative;
     width: 100%;
     height:auto;
@@ -7,7 +10,7 @@
 .image {
   opacity: 1;
   display: block;
-  width: 90%;
+  width: 100%;
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
@@ -34,8 +37,10 @@
 }
 
 .text {
+
   background-color: none;
-  color: black;
+  color: #3d3d3d;
   font-size: 12px;
-  padding: 16px 16px;
+  padding-right: 35px;
+
 }
