--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -1,16 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
+
+
 .hello {
     position: relative;
     width: 100%;
-    padding-left:10%; /* padding-left must be the same as sidebar width */
+    padding-left:5%; /* padding-left must be the same as sidebar width */
+    padding-top:0;
     height: 0px; /* This could be anything, content should scroll vertical */
     background: white;
     box-sizing:border-box;
-    font-size: 90pt;
+    font-size: 50pt;
     line-height: auto;
 }
 
 .hello:hover {
-	color:#FF7963;
+	color:#5AC3FF;
 }
 
 .introduction {
@@ -21,10 +26,11 @@
     box-sizing:border-box;
     margin:0px;
     font-size: 20pt; 
-    padding-top:30%;
+    padding-top:15%;
+    padding-left:15%;
     line-height: auto;
 }
 
 .introduction:hover {
-	color:#FF7963;
+	color:#5AC3FF;
 }
