--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -37,10 +37,8 @@
 }
 
 .text {
-
   background-color: none;
   color: #3d3d3d;
-  font-size: 12px;
-  padding-right: 35px;
-
+  font-size: 14px;
+  text-align: center;
 }
