--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -4,14 +4,13 @@
 
 .hello {
     position: relative;
-    width: 100%;
-    padding-left:5%; /* padding-left must be the same as sidebar width */
-    padding-top:0;
+    width: 100%; /* padding-left must be the same as sidebar width */
     height: 0px; /* This could be anything, content should scroll vertical */
     background: white;
     box-sizing:border-box;
-    font-size: 50pt;
+    font-size: 16pt;
     line-height: auto;
+    margin-bottom:100px;
 }
 
 .hello:hover {
@@ -19,18 +18,15 @@
 }
 
 .introduction {
-    width: 100%;
-    padding-left:1%; /* padding-left must be the same as sidebar width */
+    width: 100%; /* padding-left must be the same as sidebar width */
     height: 1px; /* This could be anything, content should scroll vertical */
     background: white;
     box-sizing:border-box;
     margin:0px;
-    font-size: 20pt; 
-    padding-top:15%;
-    padding-left:15%;
+    font-size: 12pt; 
+    margin-top:100px;
+    width:900px;
     line-height: auto;
+    margin:center;
 }
 
-.introduction:hover {
-	color:#5AC3FF;
-}
