--- a/src/templates/page.module.css
+++ b/src/templates/page.module.css
@@ -25,7 +25,10 @@
     color:gray;
     font-size: 12pt;
     font-weight:bold;
-
-
- 
+}
+.team{
+    font-family: 'IBM Plex Sans', sans-serif;
+    color:gray;
+    font-size: 12pt;
+    font-weight:bold;
 }
