--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 .hello {
     position: relative;
@@ -11,6 +10,7 @@
     font-size: 16pt;
     line-height: auto;
     margin-bottom:100px;
+
 }
 
 .hello:hover {
@@ -25,11 +25,13 @@
     margin:0px;
     font-size: 12pt; 
     margin-top:100px;
-    width:900px;
+    width:800px;
     line-height: auto;
     margin:center;
     font-weight:lighter;
 }
-.poop{
-    width:10px;
+
+.pic{
+    float:right;
+
 }
