--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,19 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .copyright{
     color:gray;
     font-size:12px;
-    font-family: 'Roboto Mono', monospace;
+  /*  font-family: 'Roboto Mono', monospace;*/
     float:bottom;
     position:bottom;
     margin-top:400px;
+    font-family: 'Lato', sans-serif;
+
   /* padding-top must be the same as header height */
 
 }
 
 .ElenaBremner {
-    font-family: 'Roboto Mono', monospace;
+/*    font-family: 'Roboto Mono', monospace;*/
+    font-family: 'Lato', sans-serif;
     color:#6E6E6E;
     font-style:bold;
     /*font-weight: bold #6E6E6E ;*/
@@ -23,9 +27,11 @@
     font-size:13pt;
     line-height: 1.3;
 
+
 }
 .sidebar {
-    font-family: 'Roboto Mono', monospace;
+/*    font-family: 'Roboto Mono', monospace;*/
+    font-family: 'Lato', sans-serif;
     padding-top:0%; /* padding-top must be the same as header height */
     padding-left:2%;
     width:15%;
