--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .container {
 
@@ -37,6 +38,7 @@
 }
 
 .text {
+  font-family: 'Lato', sans-serif;
   background-color: none;
   color: #3d3d3d;
   font-size: 14px;
