--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,10 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
- main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  }
+
 .copyright{
     color:gray;
     font-size:12px;
@@ -33,6 +30,7 @@
 
 
 }
+
 .sidebar {
 /*    font-family: 'Roboto Mono', monospace;*/
     font-family: 'Lato', sans-serif;
@@ -46,17 +44,26 @@
     z-index:99;
     font-size:12pt;
     line-height: 3;
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+@media(max-width: 600px){
+    .sidebar {
+     width:30%;
+    z-index: 99;
+ }
 }
 
 .work {
     font-family: 'Roboto Mono', monospace;
     font-size:12pt;
     position: fixed;
-     box-sizing:border-box;
-     z-index:99;
-     color:pink;
-
+    box-sizing:border-box;
+    z-index:99;
+    color:pink;
 }
+
 .UX{
     font-family: 'Roboto Mono', monospace;
     font-size:9pt;
@@ -77,7 +84,6 @@
     display:block;
 }
 
-
 .container {
     padding: 25px;
     margin: 0px;
@@ -87,11 +93,16 @@
     font-family: 'Roboto Mono', monospace;
     position: relative;
     width: 100%;
-    padding-left:16%; /* padding-left must be the same as sidebar width */
+    padding-left:16%; /* padding-left must be slightly bigger than sidebar width */
     height: 0px; /* This could be anything, content should scroll vertical */
-    background-color: white;
+    background-color: green;
     box-sizing:border-box;
-    padding-top: 5%;
+}
+
+@media(max-width: 800px){
+    .maincontent {
+    padding-left:40%;/* padding-left must be slightly bigger than sidebar width */
+ }
 }
 
 #text span {
