--- a/src/templates/page.module.css
+++ b/src/templates/page.module.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto:300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap');
 
+.markedownWrapper {
+    width:100%;
+    background-color: pink;
+}
+
 .title{
     font-family: 'IBM Plex Sans', sans-serif;
     color:black;
@@ -14,7 +19,7 @@
     color:black;
     font-size: 12pt;
     font-weight:medium;
-    width: 600px;
+    width: 100%;
     line-height:2;
 /*    padding-left:10%;*/
 
