new pinpal.js for organnization and phone size accom

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -48,12 +48,6 @@
     grid-row: span 2;
 }
 
-@media(max-width: 600px){
-    .sidebar {
-     width:30%;
-    z-index: 99;
- }
-}
 
 .work {
     font-family: 'Roboto Mono', monospace;
@@ -99,20 +93,23 @@
     box-sizing:border-box;
 }
 
-@media(max-width: 800px){
+@media(max-width: 600px){
+    .sidebar {
+     width:26%;
+    z-index: 99;
+    font-size:10pt;
+ }
     .maincontent {
-    padding-left:40%;/* padding-left must be slightly bigger than sidebar width */
+    padding-left:33%;/* padding-left must be slightly bigger than sidebar width */
  }
 }
-
-#text span {
+/*#text span {
   display:none;
 
 }
 #text span:target {
   display:block;
-
-}
+}*/
 #icons{
     text-decoration: none;
    color:blue;
