--- a/src/pages/UX.module.css
+++ b/src/pages/UX.module.css
@@ -1,36 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .wrapper {
-
-  height: 10%;
+  height:10%;
   width:80%;
   display: grid;
-  grid-gap: 0px;
+  grid-gap: 3%;
   grid-template-columns: repeat(2, 50%);
-  grid-template-rows: repeat(1, min-content);
+  grid-template-rows: repeat(2, min-content);
   grid-auto-flow: row;
-  line-height: 0px;
   margin:auto;
  
 }
 .subwrapper{
-    margin-bottom: 0px;
-    margin-right:50px;
-    vertical-align: bottom;
-    display:block;
-    float:right;
-    clear: both;
-    overflow:auto;
+  vertical-align: bottom;
+  display:block;
+  float:left;
+  clear: both;
+  overflow:auto;
+
 }
 
 .intro p {
-color: black;
-font-weight:bold;
-font-family: 'Lato', sans-serif;
+  color: black;
+  font-weight:bold;
+  font-family: 'Lato', sans-serif;
 }
 
 .intro {
-color: black;
-padding-bottom: 10%;
-font-weight: lighter;
+  color: black;
+  padding-bottom: 10%;
+  font-weight: lighter;
+}
+
+@media(max-width: 800px){
+  .wrapper {
+  grid-template-columns: repeat(1, 100%);
+  width:100%;
+ }
 }
