--- a/src/pages/UX.module.css
+++ b/src/pages/UX.module.css
@@ -32,9 +32,26 @@
   font-weight: lighter;
 }
 
-@media(max-width: 800px){
+/*ipad*/
+@media(max-width: 1024px){
+.gridWrapper {
+  grid-template-columns: repeat(2, 50%);
+  width:100%;
+ }
+ .intro{
+  font-size:18pt;
+  padding-left:10%;
+ }
+}
+
+/*phone*/
+@media(max-width: 500px){
   .wrapper {
   grid-template-columns: repeat(1, 100%);
   width:100%;
+ }
+  .intro{
+  font-size:12pt;
+  padding-left:0%;
  }
 }
