--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,23 +1,23 @@
 
 .ElenaBremner {
-/*    font-family: 'Roboto Mono', monospace;*/
     font-family: 'Lato', sans-serif;
     color:#6E6E6E;
-    font-style:bold;
-    /*font-weight: bold #6E6E6E ;*/
     padding-left:0%;
     padding-top:0%;
     padding-bottom:20%;
     font-size:13pt;
     line-height: 1.3;
+
 }
 .work {
     font-family: 'Lato', sans-serif;
-    font-size:12pt;
+    /*font-size:14pt;*/
     position: sticky;
     box-sizing:border-box;
     z-index:99;
     color:pink;
+    font-size:14pt;
+
 }
 
 .optionalWork{
@@ -30,3 +30,15 @@
 .work:hover .optionalWork{
     display:block;
 }
+
+@media(max-width: 1024px){
+    .ElenaBremner {
+    display:none;
+     }
+    .optionalWork{
+    font-family: 'Lato', sans-serif;
+    font-size:9pt;
+    display:block;
+    margin-left:12px;
+}
+ }
