--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -2,12 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .container {
-
     position: relative;
     width: 100%;
     height:auto;
     height: 20%;
-
 }
 
 .image {
@@ -30,7 +28,7 @@
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
-  width:70%;
+  width:100%;
 
 
 }
@@ -52,16 +50,13 @@
 
 }
 
-@media(max-width: 800px){
+@media(max-width: 1024px){
   .middle {
-    opacity: 1.2;
-
+    opacity: 1;
  }
  .text {
-    color: black;
-    background-color:rgb(255,255,255,0.8);
-    font-size: 14px;
-    line-height: 1.2;
- }
-
+    color:white;
+    background-color:rgb(0,0,0,0.5);
+    font-size: 11pt;
+    line-height: 1.2; }
 }
