--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -33,7 +33,30 @@
     width: 400px;
 
 }
-@media(max-width: 1000px){
+/*ipad*/
+@media(max-width: 1024px){
+    .hello {
+      color:black;
+      background-color:none;
+      padding-bottom: 5%;
+      font-size: 14pt;
+      font-weight: bold;
+
+    }
+    .pic {
+      position:relative;
+      width:40%;
+      margin-left:10%;
+      margin-right:0%;
+      margin-top:3%;
+    }
+    .introduction {
+        width:50%;
+        font-size: 12pt;
+    }
+}
+/*phone*/
+@media(max-width: 500px){
     .hello {
       color:black;
       background-color:none;
@@ -55,5 +78,6 @@
         font-size: 10pt;
     }
 }
+
 
 
