--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -3,22 +3,22 @@
 .contact { /*contact */
     position: relative;
     width: 100%;
-    padding-left:10%; /* padding-left must be the same as sidebar width */
-    height: 40%; /* This could be anything, content should scroll vertical */
+   /* padding-left:10%;*/ /* padding-left must be the same as sidebar width */ 
     background-color:white;
     box-sizing:border-box;
     font-size: 30pt;
     line-height: auto;
     font-color:black;
     font-family: 'Lato', sans-serif;
+    text-align: center;
+    padding-right:15%;
+    padding-top:2%;
 }
 
 .contactlink2{
     text-decoration: none;
-    color:#91A5BD;
-    font-size:15pt; 
-    
-    /*padding-right: 90%;*/
+    color:#70FFCE;
+    font-size:12pt; 
 }
 
 .contactlink{
@@ -30,10 +30,14 @@
 .contactlink:hover{
     color:#70FFCE;
 }
-.contactlink2:hover{
-     color:#FF0080;
-}
-.cat{
 
 
+@media(max-width: 1000px){
+  .contact {
+    font-size: 18pt;
+    text-align: center;
+    padding-top:45%;
+    padding-left:0%;
+    padding-right:0%;
+ }
 }
