--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -21,8 +21,20 @@
   line-height: 0px;
 /*  background-color:green;*/
 }
+/*ipad*/
+@media(max-width: 1024px){
+.gridWrapper {
+  grid-template-columns: repeat(2, 50%);
+  width:100%;
+ }
+ .intro{
+  font-size:14pt;
+  margin-top:14%;
+ }
+}
 
-@media(max-width: 800px){
+/*phone*/
+@media(max-width: 500px){
 .gridWrapper {
   grid-template-columns: repeat(1, 100%);
   width:100%;
