--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,22 +1,23 @@
 
-.ElenaBremner {
-    font-family: 'Lato', sans-serif;
-    color:#6E6E6E;
-    padding-left:0%;
-    padding-top:0%;
-    padding-bottom:20%;
-    font-size:13pt;
-    line-height: 1.3;
 
+.ElenaBremner{
+    width:60%;
+    position:absolute;
+    right:1%;
+    margin-top:5%;
+    
 }
 .work {
     font-family: 'Lato', sans-serif;
-    /*font-size:14pt;*/
+    font-size:14pt;
+/*    font-family: masqualero, sans-serif;
+    font-size:16pt;*/
     position: sticky;
     box-sizing:border-box;
     z-index:99;
     color:pink;
-    font-size:14pt;
+    margin-top:20%;
+/*    font-color:pink;*/
 
 }
 
@@ -25,15 +26,18 @@
     font-size:9pt;
     display:none;
     margin-left:12px;
+
 }
 
 .work:hover .optionalWork{
     display:block;
+    right:0%;
 }
 
 @media(max-width: 1024px){
     .ElenaBremner {
     display:none;
+    width:75%;
      }
     .optionalWork{
     font-family: 'Lato', sans-serif;
