--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+
+/*.ElenaBremner{
+  width:20%;
+  right:2%;
+}*/
 .trial{
   float:left;
   font-size:10px;
@@ -7,7 +12,7 @@
 }
 
 .indexContainer{
-/*  background-color:pink;*/
+  padding-top:1%;
 }
 
 .gridWrapper {
@@ -67,6 +72,7 @@ color: black;
 padding-bottom: 10%;
 font-weight: lighter;
 font-family: 'Lato', sans-serif;
+font-size:14pt;
 }
 
 .mark {
