--- a/src/pages/pinPal.module.css
+++ b/src/pages/pinPal.module.css
@@ -1,8 +1,135 @@
 
-.test{
-    color:pink;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url("https://use.typekit.net/eii1uqx.css");
+
+:root{
+    --pageColor:#3fa6ff;
+    --margin:5%;
 }
-.imageTest{
-    width:30%;
-    margin-left: 30px;
+.title{
+    color:var(--pageColor);
+    font-family: masqualero, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size:30pt;
+    position:relative;
+    text-align: center;
+    margin-top:5%;
+    margin-bottom:2%;
 }
+.info{
+    color:black;
+    font-family: europa, sans-serif;
+    text-align: center;
+    font-size:14pt;
+    color:gray;
+    position:relative;
+
+}
+.introImage{
+    width:100%;
+    margin:auto;
+    margin-right:5%;
+    position: relative;
+    /*margin-top:5%;*/
+}
+.oneliner{
+    font-family: europa, sans-serif;
+    text-align: center;
+    color:#463f45;
+    font-size:16pt;
+    position:relative;
+    font-style:italic;
+    margin-bottom:3%;
+    margin-top:3%;
+}
+.intro{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:50%;
+    position:relative;
+/*    margin-top:3%;
+    margin-left:5%;*/
+    margin:auto;
+    line-height:1.5;
+    background-color:#F8F8F8;
+    padding:8%;
+}
+.intro a{
+    text-decoration: none;
+    color:blue;
+    font-weight:bold;
+}
+
+.section{
+    font-size:24pt;
+    margin-top:5%;
+    margin-left:var(--margin);
+/*    font-family: masqualero, sans-serif;
+    font-weight:700;*/
+}
+.subtitle{
+    margin-top:10%;
+    font-size:16pt;
+    margin-left:var(--margin);
+    font-weight:bold;
+}
+.paragraph{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:50%;
+    position:relative;
+    margin-top:3%;
+    line-height:1.5;
+    margin-left:var(--margin);
+
+}
+.list{
+    border-spacing:210px 0 ; 
+    color:#383838;
+}
+.conText{
+    font-family: 'Lato', sans-serif;
+    font-size:10pt;
+     margin-left:var(--margin);
+    color:var(--pageColor);
+}
+.Himage{
+    width:50%;
+    margin:auto;
+    position: relative;
+    margin-top:8%;
+}
+.Vimage{
+    width:12%;
+    bottom:5%;
+    position: relative;
+    margin-right:15%;
+    float:right;
+    transform: rotate(45deg);
+}
+.listImage{
+    width:15%;
+    margin:auto;
+    position: relative;
+}
+.FDImage{
+    width:70%;
+    margin:auto;
+}
+.FDVid{
+    width:20%;
+    margin-left:20%;
+}
+@media(max-width: 1024px){
+
+    .introImage {
+        width: 40%;
+     }
+
+     
+}
+
