--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -20,7 +20,7 @@
     grid-column: span 2;
     grid-row: span 2;
     display:block; 
-/*    background-color:pink;*/
+   /* background-color:blue;*/
 }
 
 .container {
