--- a/src/pages/VirtualOffice.module.css
+++ b/src/pages/VirtualOffice.module.css
@@ -34,24 +34,24 @@
     width:100%;
     margin:auto;
     margin-right:5%;
+    margin-bottom:10%;
     position: relative;
     /*margin-top:5%;*/
 }
 .oneliner{
     font-family: europa, sans-serif;
     text-align: center;
+/*    margin:auto;*/
+    margin-top:5%;
     color:#463f45;
     font-size:16pt;
-    position:relative;
     font-style:italic;
-    margin-bottom:3%;
-    margin-top:3%;
 }
 .intro{
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:50%;
+    width:65%;
     position:relative;
 /*    margin-top:3%;
     margin-left:5%;*/
@@ -59,25 +59,34 @@
     line-height:1.5;
     background-color:#F8F8F8;
     padding:8%;
+    margin-bottom:5%;
+    margin-top:5%;
 }
 .intro a{
     text-decoration: none;
     color:blue;
     font-weight:bold;
+
 }
 
 .section{
     font-size:24pt;
     margin-top:5%;
-    margin-left:var(--margin);
-/*    font-family: masqualero, sans-serif;
-    font-weight:700;*/
+    text-align: center;
+/*    margin-left:var(--margin);*/
+    font-family: masqualero, sans-serif;
+    font-weight:700;
+    color:#4f4f4f;
 }
+
 .subtitle{
-    margin-top:10%;
+  /*  margin-top:10%;*/
     font-size:16pt;
     margin-left:var(--margin);
+    margin:auto;
     font-weight:bold;
+/*    text-align: center;*/
+    margin-top:5%;
 }
 .paragraph{
     color:black;
@@ -85,16 +94,45 @@
     font-size:14pt;
     width:50%;
     position:relative;
+    margin:auto;
     margin-top:3%;
     line-height:1.5;
-    margin-left:var(--margin);
-
+/*    margin-left:var(--margin);*/
+}
+.list{
+    width:100%;
+    border-spacing:15px 0 ; 
+    margin-top:10%;
+}
+.listText{
+    font-size:14pt;
+ /*   margin-left:var(--margin);*/
+}
+.Himage{
+    width:70%;
+    margin:auto;
+    position: relative;
+    margin-top:8%;
+}
+.HimageS{
+    width:40%;
+    margin:auto;
+    position: relative;
+    margin-top:8%;
+}
+.Vimage{
+    width:20%;
+    position: relative;
+    margin-top:8%;
 }
 .FDVid{
     width:100%;
    
 }
 .threeVid {
-    width:50%;
+    width:70%;
+    display: block;
+    margin: 0 auto;
+    margin-top:5%;
     
 }
