--- a/src/pages/VirtualOffice.module.css
+++ b/src/pages/VirtualOffice.module.css
@@ -87,6 +87,7 @@
     font-weight:bold;
 /*    text-align: center;*/
     margin-top:5%;
+    margin-bottom:5%;
 }
 .paragraph{
     color:black;
@@ -102,6 +103,10 @@
 .paragraph a{
     text-decoration: none;
     color:blue;
+    font-weight:bold;
+}
+.name {
+    text-align: center;
     font-weight:bold;
 }
 .list{
@@ -120,10 +125,18 @@
     margin-top:8%;
 }
 .HimageS{
-    width:40%;
+    width:50%;
     margin:auto;
     position: relative;
-    margin-top:8%;
+    margin-top:3%;
+    margin-bottom:3%;
+}
+.HimageXS{
+    width:20%;
+    margin:auto;
+    position: relative;
+    margin-top:3%;
+    margin-bottom:3%;
 }
 .Vimage{
     width:20%;
