--- a/src/pages/pinPal.module.css
+++ b/src/pages/pinPal.module.css
@@ -70,7 +70,8 @@
 
 .section{
     font-size:24pt;
-    margin-top:5%;
+    margin-top:10%;
+    margin-bottom:5%;
     text-align: center;
 /*    margin-left:var(--margin);*/
     font-family: masqualero, sans-serif;
@@ -79,7 +80,7 @@
 }
 
 .subtitle{
-    margin-top:10%;
+    margin-top:5%;
     font-size:16pt;
     margin-left:var(--margin);
     font-weight:bold;
@@ -88,36 +89,68 @@
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:50%;
+    width:65%;
     position:relative;
     margin:auto;
     margin-top:3%;
+    margin-bottom:3%;
     line-height:1.5;
 /*    margin-left:var(--margin);*/
 }
 .list{
-    /*border-spacing:210px 0 ; */
+    border-spacing:210px 0 ; 
     color:#383838;
+    margin-top:5%;
 }
 .conText{
     font-family: 'Lato', sans-serif;
     font-size:10pt;
-     margin-left:var(--margin);
-    color:var(--pageColor);
+    text-align: center;
+    color:blue;
+    margin-top:2%;
 }
 .Himage{
-    width:80%;
+    width:100%;
     margin:auto;
     position: relative;
     margin-top:8%;
 }
-.Vimage{
-    width:12%;
-    bottom:5%;
+.HimageS{
+    width:70%;
+    margin:auto;
     position: relative;
-    margin-right:15%;
+    margin-top:8%;
+}
+.HimageXS{
+    width:60%;
+    margin:auto;
+    position: relative;
+    margin-top:8%;
+}
+.HimageLeft{
+    width:50%;
+/*    position: relative;*/
+    margin-top:8%;
+    margin-bottom:10%;
+    float:left;
+ 
+}
+.HimageRight{
+    width:50%;
+/*    position: relative;*/
+    margin-top:8%;
+    margin-bottom:10%;
     float:right;
-    transform: rotate(45deg);
+
+}
+.Vimage{
+    width:64%;
+    margin:auto;
+    /*bottom:5%;*/
+/*    position: relative;*/
+/*    margin-right:15%;
+    float:right;*/
+/*    transform: rotate(90deg);*/
 }
 .listImage{
     width:15%;
