--- a/src/pages/pinPal.module.css
+++ b/src/pages/pinPal.module.css
@@ -97,6 +97,13 @@
     line-height:1.5;
 /*    margin-left:var(--margin);*/
 }
+.paragraphLeft{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:65%;
+
+}
 .list{
     border-spacing:210px 0 ; 
     color:#383838;
@@ -141,7 +148,6 @@
     margin-top:8%;
     margin-bottom:10%;
     float:right;
-
 }
 .Vimage{
     width:64%;
