--- a/src/pages/pinPal.module.css
+++ b/src/pages/pinPal.module.css
@@ -5,7 +5,7 @@
 
 :root{
     --pageColor:#3fa6ff;
-    --margin:5%;
+    --margin:10%;
 }
 .wrapper{
     width:100%;
@@ -81,8 +81,8 @@
 
 .subtitle{
     margin-top:5%;
-    font-size:16pt;
-    margin-left:var(--margin);
+    font-size:18pt;
+    margin-left:17%;
     font-weight:bold;
 }
 .paragraph{
@@ -92,16 +92,19 @@
     width:65%;
     position:relative;
     margin:auto;
-    margin-top:3%;
-    margin-bottom:3%;
-    line-height:1.5;
+    margin-top:4%;
+    margin-bottom:8%;
+    line-height:1.6;
 /*    margin-left:var(--margin);*/
 }
-.paragraphLeft{
+.paragraphRight{
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:65%;
+    width:45%;
+    float:right;
+    line-height:1.6;
+    margin-top:8%;
 
 }
 .list{
@@ -120,7 +123,16 @@
     width:100%;
     margin:auto;
     position: relative;
-    margin-top:8%;
+    margin-top:6%;
+    outline-style: solid;
+    color:#E8EAED
+}
+.HimageBW{
+    filter: grayscale(100%);
+    width:100%;
+    margin:auto;
+    position: relative;
+    margin-top:6%;
 }
 .HimageS{
     width:70%;
@@ -137,7 +149,7 @@
 .HimageLeft{
     width:50%;
 /*    position: relative;*/
-    margin-top:8%;
+/*    margin-top:2%;*/
     margin-bottom:10%;
     float:left;
  
@@ -145,7 +157,7 @@
 .HimageRight{
     width:50%;
 /*    position: relative;*/
-    margin-top:8%;
+/*    margin-top:2%;*/
     margin-bottom:10%;
     float:right;
 }
@@ -166,6 +178,7 @@
 .FDImage{
     width:70%;
     margin:auto;
+    margin-top:8%;
 }
 .FDVid{
     width:20%;
