--- a/src/pages/groupChat.module.css
+++ b/src/pages/groupChat.module.css
@@ -1,9 +1,4 @@
 
-
-:root{
-    --pageColor:#3fa6ff;
-    --margin:5%;
-}
 .wrapper{
     width:100%;
     /*background-color:pink;*/
@@ -80,8 +75,8 @@
 .subtitle{
   /*  margin-top:10%;*/
     font-size:16pt;
-    margin-left:var(--margin);
-    margin:auto;
+    margin-left:17%;
+/*    margin:auto;*/
     font-weight:bold;
 /*    text-align: center;*/
     margin-top:5%;
@@ -91,9 +86,21 @@
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:50%;
+    width:60%;
     position:relative;
     margin:auto;
+    margin-top:3%;
+    line-height:1.5;
+/*    margin-left:var(--margin);*/
+}
+.paragraphLeft{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:40%;
+    position:relative;
+    margin-left:17%;
+    float:left;
     margin-top:3%;
     line-height:1.5;
 /*    margin-left:var(--margin);*/
@@ -117,7 +124,7 @@
  /*   margin-left:var(--margin);*/
 }
 .Himage{
-    width:70%;
+    width:100%;
     margin:auto;
     position: relative;
     margin-top:8%;
@@ -130,25 +137,21 @@
     margin-bottom:3%;
 }
 .HimageXS{
-    width:20%;
+    width:40%;
     margin:auto;
     position: relative;
-    margin-top:3%;
+/*    margin-top:3%;*/
     margin-bottom:3%;
 }
 .Vimage{
-    width:20%;
+    width:40%;
     position: relative;
     margin-top:8%;
 }
 .FDVid{
-    width:100%;
-   
-}
-.threeVid {
-    width:70%;
-    display: block;
-    margin: 0 auto;
+    display:block;
+    width:20%;
+    margin:auto;
     margin-top:5%;
-    
+
 }
