--- a/src/pages/GCal.module.css
+++ b/src/pages/GCal.module.css
@@ -1,70 +1,32 @@
-
-
-:root{
-    --pageColor:#3fa6ff;
-    --margin:5%;
-}
-.wrapper{
-    width:100%;
-    /*background-color:pink;*/
-}
-.title{
-    color:var(--pageColor);
-    font-family: masqualero, sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size:30pt;
-    position:relative;
-    text-align: center;
-    margin-top:5%;
-    margin-bottom:2%;
-}
-.info{
-    color:black;
-    font-family: europa, sans-serif;
-    text-align: center;
-    font-size:14pt;
-    color:gray;
-    position:relative;
-
-}
-.introImage{
-    width:100%;
+.Himage{
+    width:90%;
     margin:auto;
-    margin-right:5%;
-    margin-bottom:10%;
     position: relative;
-    /*margin-top:5%;*/
-}
-.oneliner{
-    font-family: europa, sans-serif;
-    text-align: center;
-/*    margin:auto;*/
-    margin-top:5%;
-    color:#463f45;
-    font-size:16pt;
-    font-style:italic;
-}
-.intro{
-    color:black;
-    font-family: 'Lato', sans-serif;
-    font-size:14pt;
-    width:65%;
-    position:relative;
-/*    margin-top:3%;
-    margin-left:5%;*/
-    margin:auto;
-    line-height:1.5;
-    background-color:#F8F8F8;
-    padding:8%;
-    margin-bottom:5%;
-    margin-top:5%;
-}
-.intro a{
-    text-decoration: none;
-    color:blue;
-    font-weight:bold;
+    margin-top:3%;
 
+}
+.HimageS{
+    width:50%;
+    margin:auto;
+    position: relative;
+    margin-top:3%;
+    box-shadow:  5px 5px 20px #a8a8a8;
+
+}
+.HimageXS{
+    width:15%;
+    margin:auto;
+    position: relative;
+    margin-top:8%;
+
+}
+.subtitle{
+    font-size:16pt;
+    margin-left:var(--margin);
+    margin:auto;
+    font-weight:bold;
+    margin-top:5%;
+    color:#595959;
 }
 
 .section{
@@ -77,67 +39,20 @@
     color:#4f4f4f;
 }
 
-.subtitle{
-  /*  margin-top:10%;*/
-    font-size:16pt;
-    margin-left:var(--margin);
-    margin:auto;
-    font-weight:bold;
-/*    text-align: center;*/
-    margin-top:5%;
-    margin-bottom:5%;
-}
 .paragraph{
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:50%;
+    width:60%;
     position:relative;
     margin:auto;
     margin-top:3%;
     line-height:1.5;
 /*    margin-left:var(--margin);*/
 }
-.paragraph a{
-    text-decoration: none;
-    color:blue;
-    font-weight:bold;
-}
-.name {
-    text-align: center;
-    font-weight:bold;
-}
-.list{
-    width:100%;
-    border-spacing:15px 0 ; 
-    margin-top:10%;
-}
-.listText{
-    font-size:14pt;
- /*   margin-left:var(--margin);*/
-}
-.Himage{
-    width:70%;
-    margin:auto;
-    position: relative;
-    margin-top:8%;
-}
-.HimageS{
-    width:50%;
-    margin:auto;
-    position: relative;
-    margin-top:3%;
-    margin-bottom:3%;
-}
-.HimageXS{
+.illus{
     width:20%;
     margin:auto;
-    position: relative;
-    margin-top:3%;
-    margin-bottom:3%;
-}
-.Vimage{
-    width:20%;
     position: relative;
     margin-top:8%;
 }
