--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -1,9 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://use.typekit.net/vnv4usw.css");
 
 .hello {
      /* font-family: 'Lato', sans-serif;*/
+/*    font-family: juniper-std, sans-serif;*/
     font-family: masqualero, sans-serif;
     font-weight: 700;
     position: relative;
