--- a/src/pages/GCal.module.css
+++ b/src/pages/GCal.module.css
@@ -1,3 +1,22 @@
+.intro{
+    color:black;
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:65%;
+    position:relative;
+/*    margin-top:3%;
+    margin-left:5%;*/
+    margin:auto;
+    line-height:1.5;
+    background-color:#F8F8F8;
+    padding:8%;
+    margin-bottom:5%;
+    margin-top:5%;
+
+}
+.intro b{
+    color:#4285f4;
+}
 .Himage{
     width:90%;
     margin:auto;
@@ -38,7 +57,6 @@
     font-weight:700;
     color:#4f4f4f;
 }
-
 .paragraph{
     color:black;
     font-family: 'Lato', sans-serif;
@@ -48,6 +66,16 @@
     margin:auto;
     margin-top:3%;
     line-height:1.5;
+}
+.list{
+    font-family: 'Lato', sans-serif;
+    font-size:14pt;
+    width:60%;
+    position:relative;
+    margin:auto;
+    margin-top:3%;
+    line-height:1.5;
+    color:#4285f4;
 /*    margin-left:var(--margin);*/
 }
 .illus{
