--- a/src/pages/GCal.module.css
+++ b/src/pages/GCal.module.css
@@ -67,6 +67,13 @@
     margin-top:3%;
     line-height:1.5;
 }
+.a {
+    padding-top:2%;
+    padding-left:22%;
+    width:80%;
+    font-size:14pt;
+    color:#595959;
+}
 .list{
     font-family: 'Lato', sans-serif;
     font-size:14pt;
