name font changed

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -5,8 +5,8 @@
 
 .hello {
      /* font-family: 'Lato', sans-serif;*/
-/*    font-family: juniper-std, sans-serif;*/
-    font-family: masqualero, sans-serif;
+    font-family: juniper-std, sans-serif;
+/*    font-family: masqualero, sans-serif;*/
     font-weight: 700;
     position: relative;
     font-size: 18pt;
