--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,10 +1,16 @@
 
 
 .ElenaBremner{
-    width:60%;
-    position:absolute;
-    right:1%;
-    margin-top:5%;
+    font-family: juniper-std, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 45pt;
+    width:100%;
+    line-height: 100%;
+/*    color:pink;*/
+/*    position:absolute;*/
+    padding-left:0%;
+   /* margin-top:5%;*/
     
 }
 .work {
