--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -13,6 +13,9 @@
    /* margin-top:5%;*/
     
 }
+.contact{
+    margin-top:80%;
+}
 .work {
     font-family: 'Lato', sans-serif;
     font-size:14pt;
