--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,14 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 
-.trial{
-  float:left;
-  font-size:10px;
-  color:gray;
-}
-
 .indexContainer{
-  padding-top:1%;
+/*  padding-top:10%;*/
+
 }
 
 .gridWrapper {
@@ -20,6 +15,7 @@
   grid-template-rows: repeat(6, min-content);
   grid-auto-flow: row;
   line-height: 0px;
+  
 /*  background-color:green;*/
 }
 /*ipad*/
@@ -61,6 +57,7 @@
 color: black;
 font-weight:bold;
 font-family: 'Lato', sans-serif;
+
 }
 
 .intro {
@@ -69,6 +66,9 @@ padding-bottom: 10%;
 font-weight: lighter;
 font-family: 'Lato', sans-serif;
 font-size:14pt;
+/*background-color:pink;*/
+/*margin-left:1%;*/
+
 }
 
 .mark {
