--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -1,12 +1,13 @@
-.background{
+.contact{
     text-decoration: none;
 /*    z-index: 99;*/
+    text-align: center;
     position:absolute; bottom:0; left:0;
+    margin-left:30%;
     color:black;
     margin-bottom: 15%;
-    margin-left:20%;
     line-height: 2;
-    text-align: center;
+  
 }
 a{
     color:black;
@@ -18,13 +19,13 @@ a{
 
     font-weight: 400;
     font-style: normal;
-    font-size: 45pt;
+    font-size: 40pt;
     width:100%;
     line-height: 100%;
 /*    color:pink;*/
 /*    position:absolute;*/
-    padding-left:0%;
-   /* margin-top:5%;*/
+    margin-top:5%;
+    margin-left:6%;
 }
 
 .work {
@@ -50,6 +51,7 @@ a{
     display:block;
     right:0%;
 }
+
 
 @media(max-width: 1024px){
     .ElenaBremner {
