--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,18 +4,20 @@
 .indexContainer{
 /*  padding-top:10%;*/
 
+
 }
 
 .gridWrapper {
   height: 100%;
   width:90%;
   display: grid;
-  grid-gap: 0px;
+  grid-gap: 10px;
   grid-template-columns: repeat(3, 33.3%);
   grid-template-rows: repeat(6, min-content);
   grid-auto-flow: row;
   line-height: 0px;
-  
+
+
 /*  background-color:green;*/
 }
 /*ipad*/
@@ -49,9 +51,21 @@
 	float:left;
 	clear: both;
 	overflow:auto;
-/*  background-color: blue;*/
+  position: relative;
+  top: 0;
+  border-radius: 2px;
+/*  transition: top ease 0.5s;*/
+  transition: all .2s ease-in-out;
 
 }
+.squareWrapper:hover{
+   box-shadow: 10px 10px 30px #C8C8C8;
+   top: -10px;
+/*   transform: scale(1.05);*/
+   z-index: 99;
+
+}
+
 
 .intro p {
 color: black;
@@ -62,7 +76,7 @@ font-family: 'Lato', sans-serif;
 
 .intro {
 color: black;
-padding-bottom: 10%;
+padding-bottom: 5%;
 font-weight: lighter;
 font-family: 'Lato', sans-serif;
 font-size:14pt;
