--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -11,8 +11,8 @@
     font-size:16pt;*/
     padding-top:1%; /* padding-top must be the same as header height */
     padding-left:2%;
-    width:20%; /**/
-    height:100%;/**/
+    width:100%; /**/
+    height:10%;/**/
     box-sizing:border-box;
     position: fixed;
     z-index:99;
@@ -20,7 +20,7 @@
     grid-column: span 2;
     grid-row: span 2;
     display:block; 
-/*    background-image: linear-gradient(blue, pink);*/
+    background-color: white;
 }
 
 .container {
@@ -32,7 +32,7 @@
    font-family: 'Lato', sans-serif;
     position: relative;
     width: 100%;
-    padding-left:20.5%; /*padding-left must be slightly bigger than sidebar width */
+/*    padding-left:20.5%; *//*padding-left must be slightly bigger than sidebar width */
     height: 0px; /* This could be anything, content should scroll vertical */
     box-sizing:border-box;
     padding-top:5%;
