--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -25,7 +25,7 @@ a{
 /*    color:pink;*/
 /*    position:absolute;*/
     margin-top:5%;
-    margin-left:6%;
+/*    margin-left:6%;*/
 }
 
 .work {
@@ -35,8 +35,7 @@ a{
     position: sticky;
     box-sizing:border-box;
     z-index:99;
-    margin-top:20%;
-    margin-left:20%;
+    margin-left:5%;
 
 }
 
