newe font added to p5.js

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -11,7 +11,7 @@
 /*    
     font-family: masqualero, sans-serif;*/
 /*     font-family: europa, sans-serif;*/
-     font-family: juniper-std, sans-serif;
+     font-family: jaf-lapture, sans-serif;
     font-weight: 700;
     font-style: normal;
     font-size:30pt;
