--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://use.typekit.net/tbu4cqd.css");
+@import url("https://use.typekit.net/lsk0fkh.css");
 
 
+.hi{
+  font-size: 32pt;
+  text-align: center;
+  margin-left: 50%;
+}
 .indexContainer{
   padding-top:10%;
 
