--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -7,35 +7,43 @@
 .sidebar {
     font-family: 'Lato', sans-serif;
     font-size:12pt;
+    border:0%;
 /*    font-family: masqualero, sans-serif;
     font-size:16pt;*/
-    padding-top:1%; /* padding-top must be the same as header height */
-    padding-left:2%;
+/*    padding-top:1%;*/ /* padding-top must be the same as header height */
+/*    padding-left:2%;*/
+    margin:0%;
+    padding:0%;
     width:100%; /**/
     height:10%;/**/
-    box-sizing:border-box;
+/*    box-sizing:border-box;*/
     position: fixed;
     z-index:99;
-    line-height: 3;
+    line-height: 5;
     grid-column: span 2;
     grid-row: span 2;
     display:block; 
-    background-color: white;
+    background-color:rgb(255,255,255);opacity:0.9;
+    box-shadow: 1px 1px 5px #C8C8C8;
+    backdrop-filter: blur(8px);
+
 }
 
 .container {
     padding: 0px;
+       background-color: #f7f9fc;
    
 }
 
 .maincontent {
    font-family: 'Lato', sans-serif;
-    position: relative;
+    position: absolute;
     width: 100%;
 /*    padding-left:20.5%; *//*padding-left must be slightly bigger than sidebar width */
     height: 0px; /* This could be anything, content should scroll vertical */
     box-sizing:border-box;
     padding-top:5%;
+
 /*    background-color: pink;*/
 /*    padding-top:3%;*/
 /*    background-color:blue;*/
