--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -7,6 +7,7 @@
     color:black;
     margin-top: 15%;
     line-height: 2;
+    font-size: 12px;
   
 }
 a{
@@ -15,11 +16,10 @@ a{
 
 .shift{
     position:absolute;
-    left:55%;
     width:100%;
+    text-align: right;
+    right:7%;
 }
-
-
 
 .ElenaBremner{
    
@@ -37,26 +37,29 @@ a{
 }
 
 .work {
+
     font-family: 'Lato', sans-serif;
-    font-size:14pt;
+    font-size:12pt;
     font-weight: 700;
     position: sticky;
-    box-sizing:border-box;
+/*    box-sizing:border-box;*/
     z-index:99;
-    margin-left:5%;
-
+    margin-left:40px;
+     transition-delay: 10s;
 }
 
 .optionalWork{
     font-family: 'Lato', sans-serif;
-    font-size:10pt;
+    font-size:9pt;
     display:none;
+    margin-right:40px;
+
 
 }
 
 .work:hover .optionalWork{
     display:block;
-    right:0%;
+    transition-delay: 10s;
 }
 
 
