--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -7,8 +7,7 @@
     width: 100%;
     height:auto;
     height: 20%;
-    
-
+/*    background-color:black;*/
 }
 
 .image {
@@ -19,23 +18,28 @@
   transition: .5s ease;
   backface-visibility: hidden;
 
-
 }
 
 .middle {
   transition: .6s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position:absolute;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+ 
+  opacity:0;
+  font-family: 'Lato', sans-serif;
+  font-size: 24px;
+  width: 100%;
+  top:50%;
+  left:50%;
   text-align: center;
-  width:100%;
+
 }
 
 .container:hover .image {
-  opacity: 0.7;
+  color:rgb(0,0,0);opacity:0.6;
+
+/*  opacity: 0.3;*/
 }
 
 .container:hover .middle {
@@ -43,17 +47,13 @@
 }
 
 .text {
-/*  font-family: masqualero, sans-serif;*/
-/*   font-family: juniper-std, sans-serif;*/
-/*  font-weight: 400;*/
-  font-family: 'Lato', sans-serif;
-/*  color: #3d3d3d;*/
-  font-size: 18px;
   text-align: center;
   line-height: 1;
-/*  color: white;*/
   font-weight:bold;
-
+  z-index: 99;
+  position: relative;
+  color:white;
+/*  background-color: black;*/
 
 }
 
