--- a/src/pages/VirtualOffice.module.css
+++ b/src/pages/VirtualOffice.module.css
@@ -77,6 +77,7 @@
     font-family: masqualero, sans-serif;
     font-weight:700;
     color:#4f4f4f;
+
 }
 
 .subtitle{
@@ -88,6 +89,7 @@
 /*    text-align: center;*/
     margin-top:5%;
     margin-bottom:5%;
+    margin-left:14%;
 }
 .paragraph{
     color:black;
