--- a/src/pages/groupChat.module.css
+++ b/src/pages/groupChat.module.css
@@ -44,14 +44,11 @@
     color:black;
     font-family: 'Lato', sans-serif;
     font-size:14pt;
-    width:65%;
+    width:40%;
     position:relative;
-/*    margin-top:3%;
-    margin-left:5%;*/
-    margin:auto;
+    padding:14%;
     line-height:1.5;
-    background-color:#F8F8F8;
-    padding:8%;
+/*    background-color:#F8F8F8;*/
     margin-bottom:5%;
     margin-top:5%;
 }
@@ -65,7 +62,7 @@
 .section{
     font-size:24pt;
     margin-top:10%;
-    text-align: center;
+    margin-left:14%;
 /*    margin-left:var(--margin);*/
     font-family: masqualero, sans-serif;
     font-weight:700;
