--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -9,22 +9,39 @@
   margin-left: 50%;
 }
 .indexContainer{
-  padding-top:10%;
+    margin: 0;
+    padding: 0;
+    background-color: #f7f9fc;
+}
+
+.intro {
+color: black;
+font-weight: lighter;
+font-family: 'jaf-lapture';
+position:absolute;
+top: 680%;
+left:30%;
+font-size:16pt;
+width:40%;
+line-height: 2;
+/*background-color:pink;*/
+/*margin-left:10%;*/
+text-align:left;
+margin:auto;
+
 
 
 }
 .contact{
     text-decoration: none;
-/*    z-index: 99;*/
-/*    text-align: center;*/
-/*    position:absolute; bottom:0; left:0;*/
-   /* margin-left:50%;*/
     color:black;
     line-height: 2;
     position:absolute;
-    left:58%;
-    top: 365%;
+    top: 900%;
+    left:36%;
     font-size:14pt;
+    
+
 }
 
 .contact a{
@@ -37,22 +54,46 @@
 
 
 .gridWrapper {
+  padding-top:10%;
   height: 100%;
   width:80%;
   display: grid;
-  grid-gap: 0px;
-  grid-template-columns: repeat(2, 50%);
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 33%);
   grid-template-rows: repeat(6, min-content);
   grid-auto-flow: row;
   line-height: 10px;
   margin:auto;
 
- grid-column: 3 / span 2;
+  grid-column: 3 / span 2;
   grid-row: third-line / 4;
+
 
 
 /*  background-color:green;*/
 }
+.squareWrapper{
+  margin-bottom: 0px;
+  vertical-align: bottom;
+  display:block;
+  float:left;
+  clear: both;
+  overflow:auto;
+  position: relative;
+  top: 0;
+  border-radius: 5px;
+/*  transition: top ease 0.5s;*/
+  transition: all .2s ease-in-out;
+
+}
+.squareWrapper:hover{
+   box-shadow: 10px 10px 30px #C8C8C8;
+   top: -10px;
+  color:rgb(255,0,0);opacity:0.8;
+  background-color: black;
+
+}
+
 /*ipad*/
 @media(max-width: 1024px){
 .gridWrapper {
@@ -77,27 +118,6 @@
  }
 }
 
-.squareWrapper{
-	margin-bottom: 0px;
-	vertical-align: bottom;
-	display:block;
-	float:left;
-	clear: both;
-	overflow:auto;
-  position: relative;
-  top: 0;
-/*  border-radius: 15px;*/
-/*  transition: top ease 0.5s;*/
-  transition: all .2s ease-in-out;
-
-}
-.squareWrapper:hover{
-   box-shadow: 10px 10px 30px #C8C8C8;
-   top: -10px;
-/*   transform: scale(1.05);*/
-/*   z-index: 99;*/
-
-}
 
 
 .intro p {
@@ -107,18 +127,7 @@ font-family: 'Lato', sans-serif;
 
 }
 
-.intro {
-color: black;
-padding-bottom: 5%;
-font-weight: lighter;
-font-family: 'Lato', sans-serif;
-font-size:14pt;
-width:35%;
-line-height: 2;
-/*background-color:pink;*/
-margin-left:10%;
 
-}
 
 .mark {
   /*background-color:#70FFCE;*/
