--- a/src/pages/sketch.module.css
+++ b/src/pages/sketch.module.css
@@ -1,22 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-.wrapper {
-  height:10%;
-  width:100%;
+.gridWrapper {
+  height:20%;
+  width:90%;
   display: grid;
   grid-template-columns: repeat(3, 30%);
   grid-template-rows: repeat(2, min-content);
   grid-auto-flow: row;
   margin:auto;
+  grid-gap: 20px;
  
 }
-.subwrapper{
+.squareWrapper{
 /*    margin-right:50px;*/
-    vertical-align: bottom;
-    display:block;
-    float:right;
-    clear: both;
-    overflow:auto;
+  margin-bottom: 0px;
+  vertical-align: bottom;
+  display:block;
+  float:left;
+  clear: both;
+  overflow:auto;
+  position: relative;
+  top: 0;
+/*  border-radius: 15px;*/
+/*  transition: top ease 0.5s;*/
+  transition: all .2s ease-in-out;
+}
+
+.squareWrapper:hover{
+   box-shadow: 10px 10px 30px #C8C8C8;
+   top: -10px;
 }
 
 .intro p {
@@ -29,6 +41,16 @@ font-family: 'Lato', sans-serif;
 color: black;
 padding-bottom: 10%;
 font-weight: lighter;
+}
+
+
+.wrapper:hover .image {
+  color:rgb(0,0,0);opacity:0.8;
+/*  opacity: 0.3;*/
+}
+
+.wrapper:hover .middle {
+  opacity: 1;
 }
 
 /*ipad*/
