--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -45,21 +45,25 @@ a{
 /*    box-sizing:border-box;*/
     z-index:99;
     margin-left:40px;
-     transition-delay: 10s;
+    letter-spacing: 2px;
 }
 
 .optionalWork{
+    visibility: hidden;
     font-family: 'Lato', sans-serif;
     font-size:9pt;
-    display:none;
+/*    display:none;*/
     margin-right:40px;
-
-
+    letter-spacing: 2px;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
 }
 
 .work:hover .optionalWork{
-    display:block;
-    transition-delay: 10s;
+/*    display:block;*/
+     visibility: visible;
+    opacity: 1;
+
 }
 
 
