--- a/src/components/work.module.css
+++ b/src/components/work.module.css
@@ -7,13 +7,17 @@
     width: 100%;
     height:auto;
     height: 20%;
-/*    background-color:black;*/
+    padding-bottom:20%;
+    backdrop-filter: blur(8px);
+    background-color:white;
+
 }
 
 .image {
   opacity: 1;
   display: block;
-  width: 100%;
+  width: 100%;  
+ /* width: 40%; try this if you dont want images to be s*/
   height: auto;
   transition: .5s ease;
   backface-visibility: hidden;
@@ -21,25 +25,24 @@
 }
 
 .middle {
-  transition: .6s ease;
+/*  transition: all 1s ease-in;
+  transition: all 0.2s ease-out;*/
+  transition: all .2s cubic-bezier(.25,.46,.45,.94);
   position:absolute;
-  transform: translate(-50%, -50%);
+/*  transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
- 
-  opacity:0;
+  this is for the text to be in the middle
+  */
+/*  opacity:0;*/
   font-family: 'Lato', sans-serif;
-  font-size: 24px;
-  width: 100%;
-  top:50%;
-  left:50%;
-  text-align: center;
+  font-size: 16px;
+  width: 80%;
+  top:88%;
+  padding-left:10%;
+  padding-right:10%;
+  text-align: left;
+  width:fixed;
 
-}
-
-.container:hover .image {
-  color:rgb(0,0,0);opacity:0.6;
-
-/*  opacity: 0.3;*/
 }
 
 .container:hover .middle {
@@ -47,14 +50,27 @@
 }
 
 .text {
-  text-align: center;
+  text-align: left;
   line-height: 1;
   font-weight:bold;
   z-index: 99;
   position: relative;
-  color:white;
+  color: #384853;
+  text-transform: uppercase;
+/*  padding-left:20px;
+  padding-right:20px;*/
+  letter-spacing: 2px;
+  font-size: 16px;
+  margin-bottom: 10px;
 /*  background-color: black;*/
-
+}
+.dateText {
+  text-transform: uppercase;
+  color:#6b7b8a;
+  font-weight:bold;
+  letter-spacing: 2px;
+  font-size: 12px;
+/*  padding-left:5%;*/
 }
 
 @media(max-width: 1024px){
